# nn

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  activations.c  activations.h  digits.c  matrix.c  neuralnetwork.c  neuralnetwork.h  nn_main.c  util.c  util.h
examples/: digits.c  snake.c
include/nn/: nn.h
mnist/: README
src/: activations.c  activations.h  matrix.c  matrix.h  neuralnetwork.c  neuralnetwork.h  util.c  util.h
